// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SouthMenu check cancel delete first dataSource 1`] = `
<div>
  <div
    class="icon-menu"
  >
    <div
      class="dropup dropdown"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="icon-dropdown btn btn-secondary btn-sm"
        type="button"
      >
        <svg
          class="icon-dropdown-ellipsis"
          fill="currentColor"
          height="1em"
          id="dropdown-toggle"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 192 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
          />
        </svg>
      </button>
      <div
        aria-hidden="true"
        class="dropdown-menu"
        role="menu"
        tabindex="-1"
      >
        <button
          class="icon-dropdown-item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            aria-hidden="true"
            id="icon-rename"
            role="button"
          >
            <svg
              class="icon-dropdown-item"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1c18.8 18.7 18.8 49.1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z"
              />
            </svg>
            Rename
          </div>
        </button>
        <button
          class="icon-dropdown-item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            aria-hidden="true"
            id="icon-settings"
            role="button"
          >
            <svg
              class="icon-dropdown-item"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M487.4 315.7l-42.6-24.6c4.3-23.2 4.3-47 0-70.2l42.6-24.6c4.9-2.8 7.1-8.6 5.5-14-11.1-35.6-30-67.8-54.7-94.6-3.8-4.1-10-5.1-14.8-2.3L380.8 110c-17.9-15.4-38.5-27.3-60.8-35.1V25.8c0-5.6-3.9-10.5-9.4-11.7-36.7-8.2-74.3-7.8-109.2 0-5.5 1.2-9.4 6.1-9.4 11.7V75c-22.2 7.9-42.8 19.8-60.8 35.1L88.7 85.5c-4.9-2.8-11-1.9-14.8 2.3-24.7 26.7-43.6 58.9-54.7 94.6-1.7 5.4.6 11.2 5.5 14L67.3 221c-4.3 23.2-4.3 47 0 70.2l-42.6 24.6c-4.9 2.8-7.1 8.6-5.5 14 11.1 35.6 30 67.8 54.7 94.6 3.8 4.1 10 5.1 14.8 2.3l42.6-24.6c17.9 15.4 38.5 27.3 60.8 35.1v49.2c0 5.6 3.9 10.5 9.4 11.7 36.7 8.2 74.3 7.8 109.2 0 5.5-1.2 9.4-6.1 9.4-11.7v-49.2c22.2-7.9 42.8-19.8 60.8-35.1l42.6 24.6c4.9 2.8 11 1.9 14.8-2.3 24.7-26.7 43.6-58.9 54.7-94.6 1.5-5.5-.7-11.3-5.6-14.1zM256 336c-44.1 0-80-35.9-80-80s35.9-80 80-80 80 35.9 80 80-35.9 80-80 80z"
              />
            </svg>
            Settings
          </div>
        </button>
        <button
          class="icon-dropdown-item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            aria-hidden="true"
            id="icon-duplicate"
            role="button"
          >
            <svg
              class="icon-dropdown-item"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M320 448v40c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V120c0-13.255 10.745-24 24-24h72v296c0 30.879 25.121 56 56 56h168zm0-344V0H152c-13.255 0-24 10.745-24 24v368c0 13.255 10.745 24 24 24h272c13.255 0 24-10.745 24-24V128H344c-13.2 0-24-10.8-24-24zm120.971-31.029L375.029 7.029A24 24 0 0 0 358.059 0H352v96h96v-6.059a24 24 0 0 0-7.029-16.97z"
              />
            </svg>
            Duplicate
          </div>
        </button>
        <button
          class="icon-dropdown-item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            aria-hidden="true"
            id="icon-status"
            role="button"
          >
            <svg
              class="icon-dropdown-item"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"
              />
            </svg>
            Status
          </div>
        </button>
        <button
          class="icon-dropdown-item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <svg
            class="icon-dropdown-item"
            fill="currentColor"
            height="1em"
            id="icon-delete"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 448 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M32 464a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128H32zm272-256a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zM432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16z"
            />
          </svg>
          Delete
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`SouthMenu check delete first dataSource 1`] = `
<div>
  <div
    class="icon-menu"
  >
    <div
      class="dropup dropdown"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="icon-dropdown btn btn-secondary btn-sm"
        type="button"
      >
        <svg
          class="icon-dropdown-ellipsis"
          fill="currentColor"
          height="1em"
          id="dropdown-toggle"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 192 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
          />
        </svg>
      </button>
      <div
        aria-hidden="true"
        class="dropdown-menu"
        role="menu"
        tabindex="-1"
      >
        <button
          class="icon-dropdown-item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            aria-hidden="true"
            id="icon-rename"
            role="button"
          >
            <svg
              class="icon-dropdown-item"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1c18.8 18.7 18.8 49.1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z"
              />
            </svg>
            Rename
          </div>
        </button>
        <button
          class="icon-dropdown-item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            aria-hidden="true"
            id="icon-settings"
            role="button"
          >
            <svg
              class="icon-dropdown-item"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M487.4 315.7l-42.6-24.6c4.3-23.2 4.3-47 0-70.2l42.6-24.6c4.9-2.8 7.1-8.6 5.5-14-11.1-35.6-30-67.8-54.7-94.6-3.8-4.1-10-5.1-14.8-2.3L380.8 110c-17.9-15.4-38.5-27.3-60.8-35.1V25.8c0-5.6-3.9-10.5-9.4-11.7-36.7-8.2-74.3-7.8-109.2 0-5.5 1.2-9.4 6.1-9.4 11.7V75c-22.2 7.9-42.8 19.8-60.8 35.1L88.7 85.5c-4.9-2.8-11-1.9-14.8 2.3-24.7 26.7-43.6 58.9-54.7 94.6-1.7 5.4.6 11.2 5.5 14L67.3 221c-4.3 23.2-4.3 47 0 70.2l-42.6 24.6c-4.9 2.8-7.1 8.6-5.5 14 11.1 35.6 30 67.8 54.7 94.6 3.8 4.1 10 5.1 14.8 2.3l42.6-24.6c17.9 15.4 38.5 27.3 60.8 35.1v49.2c0 5.6 3.9 10.5 9.4 11.7 36.7 8.2 74.3 7.8 109.2 0 5.5-1.2 9.4-6.1 9.4-11.7v-49.2c22.2-7.9 42.8-19.8 60.8-35.1l42.6 24.6c4.9 2.8 11 1.9 14.8-2.3 24.7-26.7 43.6-58.9 54.7-94.6 1.5-5.5-.7-11.3-5.6-14.1zM256 336c-44.1 0-80-35.9-80-80s35.9-80 80-80 80 35.9 80 80-35.9 80-80 80z"
              />
            </svg>
            Settings
          </div>
        </button>
        <button
          class="icon-dropdown-item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            aria-hidden="true"
            id="icon-duplicate"
            role="button"
          >
            <svg
              class="icon-dropdown-item"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M320 448v40c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V120c0-13.255 10.745-24 24-24h72v296c0 30.879 25.121 56 56 56h168zm0-344V0H152c-13.255 0-24 10.745-24 24v368c0 13.255 10.745 24 24 24h272c13.255 0 24-10.745 24-24V128H344c-13.2 0-24-10.8-24-24zm120.971-31.029L375.029 7.029A24 24 0 0 0 358.059 0H352v96h96v-6.059a24 24 0 0 0-7.029-16.97z"
              />
            </svg>
            Duplicate
          </div>
        </button>
        <button
          class="icon-dropdown-item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            aria-hidden="true"
            id="icon-status"
            role="button"
          >
            <svg
              class="icon-dropdown-item"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"
              />
            </svg>
            Status
          </div>
        </button>
        <button
          class="icon-dropdown-item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <svg
            class="icon-dropdown-item"
            fill="currentColor"
            height="1em"
            id="icon-delete"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 448 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M32 464a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128H32zm272-256a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zM432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16z"
            />
          </svg>
          Delete
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`SouthMenu check duplicate dataSource 1`] = `
<div>
  <div
    class="dropup dropdown"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="icon-dropdown btn btn-secondary btn-sm"
      type="button"
    >
      <svg
        class="icon-dropdown-ellipsis"
        fill="currentColor"
        height="1em"
        id="dropdown-toggle"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 192 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
        />
      </svg>
    </button>
    <div
      aria-hidden="true"
      class="dropdown-menu"
      role="menu"
      style="text-align: center;"
      tabindex="-1"
    >
      <button
        class="icon-dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          aria-hidden="true"
          id="icon-settings"
          role="button"
        >
          Settings
        </div>
      </button>
      <button
        class="icon-dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          aria-hidden="true"
          id="icon-duplicate"
          role="button"
        >
          Duplicate
        </div>
      </button>
      <button
        class="icon-dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          aria-hidden="true"
          id="icon-status"
          role="button"
        >
          Status
        </div>
      </button>
      <button
        class="icon-dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        Delete
      </button>
    </div>
  </div>
</div>
`;

exports[`SouthMenu check duplicate dataSource already copied 1`] = `
<div>
  <div
    class="dropup dropdown"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="icon-dropdown btn btn-secondary btn-sm"
      type="button"
    >
      <svg
        class="icon-dropdown-ellipsis"
        fill="currentColor"
        height="1em"
        id="dropdown-toggle"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 192 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
        />
      </svg>
    </button>
    <div
      aria-hidden="true"
      class="dropdown-menu"
      role="menu"
      style="text-align: center;"
      tabindex="-1"
    >
      <button
        class="icon-dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          aria-hidden="true"
          id="icon-settings"
          role="button"
        >
          Settings
        </div>
      </button>
      <button
        class="icon-dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          aria-hidden="true"
          id="icon-duplicate"
          role="button"
        >
          Duplicate
        </div>
      </button>
      <button
        class="icon-dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          aria-hidden="true"
          id="icon-status"
          role="button"
        >
          Status
        </div>
      </button>
      <button
        class="icon-dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        Delete
      </button>
    </div>
  </div>
</div>
`;

exports[`SouthMenu check edit first dataSource 1`] = `
<div>
  <div
    class="dropup dropdown"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="icon-dropdown btn btn-secondary btn-sm"
      type="button"
    >
      <svg
        class="icon-dropdown-ellipsis"
        fill="currentColor"
        height="1em"
        id="dropdown-toggle"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 192 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
        />
      </svg>
    </button>
    <div
      aria-hidden="true"
      class="dropdown-menu"
      role="menu"
      style="text-align: center;"
      tabindex="-1"
    >
      <button
        class="icon-dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          aria-hidden="true"
          id="icon-settings"
          role="button"
        >
          Settings
        </div>
      </button>
      <button
        class="icon-dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          aria-hidden="true"
          id="icon-duplicate"
          role="button"
        >
          Duplicate
        </div>
      </button>
      <button
        class="icon-dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          aria-hidden="true"
          id="icon-status"
          role="button"
        >
          Status
        </div>
      </button>
      <button
        class="icon-dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        Delete
      </button>
    </div>
  </div>
</div>
`;

exports[`SouthMenu check rename first dataSource 1`] = `
<div>
  <div
    class="icon-menu"
  >
    <div
      class="dropup dropdown"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="icon-dropdown btn btn-secondary btn-sm"
        type="button"
      >
        <svg
          class="icon-dropdown-ellipsis"
          fill="currentColor"
          height="1em"
          id="dropdown-toggle"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 192 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
          />
        </svg>
      </button>
      <div
        aria-hidden="true"
        class="dropdown-menu"
        role="menu"
        tabindex="-1"
      >
        <button
          class="icon-dropdown-item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            aria-hidden="true"
            id="icon-rename"
            role="button"
          >
            <svg
              class="icon-dropdown-item"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1c18.8 18.7 18.8 49.1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z"
              />
            </svg>
            Rename
          </div>
        </button>
        <button
          class="icon-dropdown-item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            aria-hidden="true"
            id="icon-settings"
            role="button"
          >
            <svg
              class="icon-dropdown-item"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M487.4 315.7l-42.6-24.6c4.3-23.2 4.3-47 0-70.2l42.6-24.6c4.9-2.8 7.1-8.6 5.5-14-11.1-35.6-30-67.8-54.7-94.6-3.8-4.1-10-5.1-14.8-2.3L380.8 110c-17.9-15.4-38.5-27.3-60.8-35.1V25.8c0-5.6-3.9-10.5-9.4-11.7-36.7-8.2-74.3-7.8-109.2 0-5.5 1.2-9.4 6.1-9.4 11.7V75c-22.2 7.9-42.8 19.8-60.8 35.1L88.7 85.5c-4.9-2.8-11-1.9-14.8 2.3-24.7 26.7-43.6 58.9-54.7 94.6-1.7 5.4.6 11.2 5.5 14L67.3 221c-4.3 23.2-4.3 47 0 70.2l-42.6 24.6c-4.9 2.8-7.1 8.6-5.5 14 11.1 35.6 30 67.8 54.7 94.6 3.8 4.1 10 5.1 14.8 2.3l42.6-24.6c17.9 15.4 38.5 27.3 60.8 35.1v49.2c0 5.6 3.9 10.5 9.4 11.7 36.7 8.2 74.3 7.8 109.2 0 5.5-1.2 9.4-6.1 9.4-11.7v-49.2c22.2-7.9 42.8-19.8 60.8-35.1l42.6 24.6c4.9 2.8 11 1.9 14.8-2.3 24.7-26.7 43.6-58.9 54.7-94.6 1.5-5.5-.7-11.3-5.6-14.1zM256 336c-44.1 0-80-35.9-80-80s35.9-80 80-80 80 35.9 80 80-35.9 80-80 80z"
              />
            </svg>
            Settings
          </div>
        </button>
        <button
          class="icon-dropdown-item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            aria-hidden="true"
            id="icon-duplicate"
            role="button"
          >
            <svg
              class="icon-dropdown-item"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M320 448v40c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V120c0-13.255 10.745-24 24-24h72v296c0 30.879 25.121 56 56 56h168zm0-344V0H152c-13.255 0-24 10.745-24 24v368c0 13.255 10.745 24 24 24h272c13.255 0 24-10.745 24-24V128H344c-13.2 0-24-10.8-24-24zm120.971-31.029L375.029 7.029A24 24 0 0 0 358.059 0H352v96h96v-6.059a24 24 0 0 0-7.029-16.97z"
              />
            </svg>
            Duplicate
          </div>
        </button>
        <button
          class="icon-dropdown-item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            aria-hidden="true"
            id="icon-status"
            role="button"
          >
            <svg
              class="icon-dropdown-item"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"
              />
            </svg>
            Status
          </div>
        </button>
        <button
          class="icon-dropdown-item dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <svg
            class="icon-dropdown-item"
            fill="currentColor"
            height="1em"
            id="icon-delete"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 448 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M32 464a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128H32zm272-256a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zM432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16z"
            />
          </svg>
          Delete
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`SouthMenu check status first dataSource 1`] = `
<div>
  <div
    class="dropup dropdown"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="icon-dropdown btn btn-secondary btn-sm"
      type="button"
    >
      <svg
        class="icon-dropdown-ellipsis"
        fill="currentColor"
        height="1em"
        id="dropdown-toggle"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 192 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
        />
      </svg>
    </button>
    <div
      aria-hidden="true"
      class="dropdown-menu"
      role="menu"
      style="text-align: center;"
      tabindex="-1"
    >
      <button
        class="icon-dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          aria-hidden="true"
          id="icon-settings"
          role="button"
        >
          Settings
        </div>
      </button>
      <button
        class="icon-dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          aria-hidden="true"
          id="icon-duplicate"
          role="button"
        >
          Duplicate
        </div>
      </button>
      <button
        class="icon-dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          aria-hidden="true"
          id="icon-status"
          role="button"
        >
          Status
        </div>
      </button>
      <button
        class="icon-dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        Delete
      </button>
    </div>
  </div>
</div>
`;

exports[`SouthMenu display SouthMenu page based on config 1`] = `
<div>
  <div
    class="dropup dropdown"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="icon-dropdown btn btn-secondary btn-sm"
      type="button"
    >
      <svg
        class="icon-dropdown-ellipsis"
        fill="currentColor"
        height="1em"
        id="dropdown-toggle"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 192 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
        />
      </svg>
    </button>
    <div
      aria-hidden="true"
      class="dropdown-menu"
      role="menu"
      style="text-align: center;"
      tabindex="-1"
    >
      <button
        class="icon-dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          aria-hidden="true"
          id="icon-settings"
          role="button"
        >
          Settings
        </div>
      </button>
      <button
        class="icon-dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          aria-hidden="true"
          id="icon-duplicate"
          role="button"
        >
          Duplicate
        </div>
      </button>
      <button
        class="icon-dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          aria-hidden="true"
          id="icon-status"
          role="button"
        >
          Status
        </div>
      </button>
      <button
        class="icon-dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        Delete
      </button>
    </div>
  </div>
</div>
`;

exports[`SouthMenu display SouthMenu properly when empty newConfig 1`] = `
<div>
  <div
    class="dropup dropdown"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="icon-dropdown btn btn-secondary btn-sm"
      type="button"
    >
      <svg
        class="icon-dropdown-ellipsis"
        fill="currentColor"
        height="1em"
        id="dropdown-toggle"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 192 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
        />
      </svg>
    </button>
    <div
      aria-hidden="true"
      class="dropdown-menu"
      role="menu"
      style="text-align: center;"
      tabindex="-1"
    >
      <button
        class="icon-dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          aria-hidden="true"
          id="icon-settings"
          role="button"
        >
          Settings
        </div>
      </button>
      <button
        class="icon-dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          aria-hidden="true"
          id="icon-duplicate"
          role="button"
        >
          Duplicate
        </div>
      </button>
      <button
        class="icon-dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          aria-hidden="true"
          id="icon-status"
          role="button"
        >
          Status
        </div>
      </button>
      <button
        class="icon-dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        Delete
      </button>
    </div>
  </div>
</div>
`;

exports[`SouthMenu display SouthMenu properly when empty newConfig 2`] = `
<div>
  <div
    class="dropup dropdown"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="icon-dropdown btn btn-secondary btn-sm"
      type="button"
    >
      <svg
        class="icon-dropdown-ellipsis"
        fill="currentColor"
        height="1em"
        id="dropdown-toggle"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 192 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
        />
      </svg>
    </button>
    <div
      aria-hidden="true"
      class="dropdown-menu"
      role="menu"
      style="text-align: center;"
      tabindex="-1"
    >
      <button
        class="icon-dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          aria-hidden="true"
          id="icon-settings"
          role="button"
        >
          Settings
        </div>
      </button>
      <button
        class="icon-dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          aria-hidden="true"
          id="icon-duplicate"
          role="button"
        >
          Duplicate
        </div>
      </button>
      <button
        class="icon-dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          aria-hidden="true"
          id="icon-status"
          role="button"
        >
          Status
        </div>
      </button>
      <button
        class="icon-dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        Delete
      </button>
    </div>
  </div>
</div>
`;

exports[`SouthMenu display SouthMenu properly when empty newConfig 3`] = `
<div>
  <div
    class="dropup dropdown"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="icon-dropdown btn btn-secondary btn-sm"
      type="button"
    >
      <svg
        class="icon-dropdown-ellipsis"
        fill="currentColor"
        height="1em"
        id="dropdown-toggle"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 192 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
        />
      </svg>
    </button>
    <div
      aria-hidden="true"
      class="dropdown-menu"
      role="menu"
      style="text-align: center;"
      tabindex="-1"
    >
      <button
        class="icon-dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          aria-hidden="true"
          id="icon-settings"
          role="button"
        >
          Settings
        </div>
      </button>
      <button
        class="icon-dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          aria-hidden="true"
          id="icon-duplicate"
          role="button"
        >
          Duplicate
        </div>
      </button>
      <button
        class="icon-dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          aria-hidden="true"
          id="icon-status"
          role="button"
        >
          Status
        </div>
      </button>
      <button
        class="icon-dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        Delete
      </button>
    </div>
  </div>
</div>
`;

exports[`SouthMenu display SouthMenu properly when empty newConfig 4`] = `
<div>
  <div
    class="dropup dropdown"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="icon-dropdown btn btn-secondary btn-sm"
      type="button"
    >
      <svg
        class="icon-dropdown-ellipsis"
        fill="currentColor"
        height="1em"
        id="dropdown-toggle"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 192 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
        />
      </svg>
    </button>
    <div
      aria-hidden="true"
      class="dropdown-menu"
      role="menu"
      style="text-align: center;"
      tabindex="-1"
    >
      <button
        class="icon-dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          aria-hidden="true"
          id="icon-settings"
          role="button"
        >
          Settings
        </div>
      </button>
      <button
        class="icon-dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          aria-hidden="true"
          id="icon-duplicate"
          role="button"
        >
          Duplicate
        </div>
      </button>
      <button
        class="icon-dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          aria-hidden="true"
          id="icon-status"
          role="button"
        >
          Status
        </div>
      </button>
      <button
        class="icon-dropdown-item dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        Delete
      </button>
    </div>
  </div>
</div>
`;
